--- a/content/settings.json
+++ b/content/settings.json
@@ -1,23 +1,22 @@
 {
   "siteMetadata": {
     "language": "en",
-    "siteUrl": "https://gatsby-starter-portfolio-minimal-theme.netlify.app/",
-    "title": "Gatsby Starter for Portfolio Minimal",
+    "siteUrl": "https://ideasquared.co.uk",
+    "title": "ideaSquared",
     "titleTemplate": "%s · Portfolio Minimal",
-    "description": "A Gatsby Starter Project to easily get started with Portfolio Minimal theme.",
-    "author": "Konstantin Münster",
-    "avatar": "../content/images/gatsby.png",
-    "bio": "This biography will be used in the footer area of an article and can contain some more details about the author.",
+    "description": "A website to showcase ideaSquared",
+    "author": "ideaSquared",
+    "avatar": "../content/images/favicon.png",
+    "bio": "ideaSquared teams up with a community of friendly tech enthusiasts who are excited to bring their unique perspectives to the world of digital products, and together they build something special from the ground up, from inception to production ",
     "social": {
-      "behance": "https://behance.com",
-      "github": "https://github.com/konstantinmuenster",
-      "medium": "https://konstantinmuenster.medium.com",
-      "linkedin": "https://www.linkedin.com/in/konstantin-muenster/",
-      "mail": "mailto:mail@konstantin.digital"
+      "github": "https://github.com/ideaSquared",
+      "mail": "mailto:hello@ideasquared.co.uk",
+      "facebook": "https://facebook.com/ideaSquared",
+      "twitter": "https://twitter.com/ideaSquared"
     }
   },
   "siteConfiguration": {
-    "logo": { "text": "Portfolio" },
+    "logo": { "text": "ideaSquared" },
     "navigation": {
       "header": [
         { "label": "About", "url": "/#about" },
@@ -38,7 +37,7 @@
     "featureToggles": {
       "useDarkModeAsDefault": false,
       "useDarkModeBasedOnUsersPreference": true,
-      "useCookieBar": false
+      "useCookieBar": true
     }
   }
 }
