--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "animations",
     "dark-mode",
     "gdpr-compliant"
-  ]
+  ],
+  "devDependencies": {
+    "gatsby-plugin-netlify": "^5.1.0"
+  }
 }
