--- a/content/settings.json
+++ b/content/settings.json
@@ -11,7 +11,7 @@
     "social": {
       "github": "https://github.com/ideaSquared",
       "mail": "mailto:hello@ideasquared.co.uk",
-      "facebook": "https://facebook.com/ideaSquared",
+      // "facebook": "https://facebook.com/ideaSquared",
       "twitter": "https://twitter.com/ideaSquared"
     }
   },
