--- a/content/settings.json
+++ b/content/settings.json
@@ -11,7 +11,8 @@
     "social": {
       "github": "https://github.com/ideaSquared",
       "mail": "mailto:hello@ideasquared.co.uk",
-      "twitter": "https://twitter.com/ideaSquared"
+      "twitter": "https://twitter.com/ideaSquared",
+      "facebook": "https://facebook.com/ideaSquared"
     }
   },
   "siteConfiguration": {
