--- a/content/settings.json
+++ b/content/settings.json
@@ -20,13 +20,13 @@
       "header": [
         { "label": "About", "url": "/#about" },
         { "label": "Blog", "url": "/blog" },
-        { "label": "Features", "url": "/#features" },
-        { "label": "Github", "url": "/#github" }
+        // Issue - can't openNewTab.
+        { "label": "GitHub", "url": "https://github.com/ideaSquared" }
       ],
       "ctaButton": {
-        "openNewTab": true,
-        "label": "Resume",
-        "url": "/resume.pdf"
+        "openNewTab": false,
+        "label": "Contact Us",
+        "url": "/#contact"
       },
       "footer": [
         { "label": "Privacy", "url": "/privacy" },
